--- a/UI/sections/ProjectIdea/styles/cedar-valley-farms.scss
+++ b/UI/sections/ProjectIdea/styles/cedar-valley-farms.scss
@@ -96,10 +96,6 @@
 
     ul {
       margin: 0 0 24px 10px;
-
-      &:last-of-type {
-        margin-bottom: 0;
-      }
     }
 
     li {
